fix logo stretched

--- a/packages/viewer/src/styles/menus/menu-preview.module.scss
+++ b/packages/viewer/src/styles/menus/menu-preview.module.scss
@@ -76,6 +76,7 @@
     }
 
     .organisation {
+        flex-shrink: 0;
         width: 30px;
         height: 30px;
         margin-right: 10px;
